added student info page

--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.selrow a #ain{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 3rem;
 }
 
