--- a/style.css
+++ b/style.css
@@ -84,3 +84,14 @@
     font-style: normal;
     padding: 1mm;
 }
+
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: larger;
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    padding: 1mm;
+}
